# Custom-OS

./: .gitignore  Cargo.toml  Makefile  README  run_vm.bat
.cargo/: config.toml
buildEnv/: Dockerfile
iso/boot/grub/: grub.cfg
notes/: 17-10-2024 2.txt  17-10-2024.txt  18-10-2024.txt  20-10-2024.txt  Rust notes  Rust notes.txt
src/: Cargo.toml  lib.rs
src/data/: print.rs  printDat.rs  print_data.rs
src/impl/: unsafe_print.rs
src/impl/kernel/: main.c  main.rs
src/impl/x86_64/: print.c  print.rs
src/impl/x86_64/boot/: header.asm  main.asm  main64.asm
src/lib/core/: timing.rs
src/lib/err/: gdt.rs  inits.rs  interrupts.rs
