[package]
name = "custom-os-rust"
version = "0.1.0"
authors = ["Jude Bradbury judebb4@gmail.com"]
edition = "2021"

# Disabling the standard library for no_std
[dependencies]
bootloader = "0.9.2"
rlibc = "1.0"

[[bin]]
   name = "kernel"
   path = "src/lib.rs"

[build-dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "custom-os-x86_64.json"

[lib]
   name = "custom_os_rust"
   crate-type = ["staticlib"]